z-index stuff on shadow fixed

--- a/src/documents/styles/_mixins.scss
+++ b/src/documents/styles/_mixins.scss
@@ -35,7 +35,7 @@ $menufixed: false;
 @mixin top-menu-fixed(){
   $menufixed: true;
   .container.top-bar{
-    z-index: 3; //higher than .shadow and header
+    z-index: 4; //higher than .shadow and header
   }
   //fix the top menu on larger screens
   @media #{$small} {
@@ -68,6 +68,7 @@ $menufixed: false;
     width: 100%;
     margin-top: -9px;
     height: 10px;
+    z-index:2;
     border-bottom: solid 1px #999;
     @include box-shadow(0px 1px 6px #bbb);
     @media #{$small} {
@@ -79,7 +80,7 @@ $menufixed: false;
 
   header{
     position: relative;
-    z-index: 2; //overlap shadow at bottom of nav
+    z-index: 3; //overlap shadow at bottom of nav
     margin-top: -1px; //overlap for shadow on small devices ( in which case position not fixed)
   }
 }
